2007-12-13  Philip Van Hoof <pvanhoof@gnome.org>

	* Added the TnyConnectionPolicy type for coping with connectivity
	changes (for example sheduling a reconnect or asking the user what to
	do about the event of a lost connection)
	* Added two connection policies. One that retries every five seconds
	to reconnect, and recovers the state (the selected folder)

2007-12-13  Alberto Garcia Gonzalez  <agarcia@igalia.com>

	* libtinymail-camel/tny-camel-mime-part.c
	(tny_camel_mime_part_new): Fixed a memory leak	

2007-12-13  Felipe Erias Morandeira  <femorandeira@igalia.com>

	* Commited by Sergio Villar Senin
	* libtinymail/tny-shared.h: added TNY_PRIORITY_LOWER_THAN_GTK_REDRAWS
	a priority to notify status progress lower than Gtk+ redraws
	* libtinymail-camel/tny-camel-folder.c: replaced G_PRIORITY_HIGH by
	TNY_PRIORITY_LOWER_THAN_GTK_REDRAWS

2007-12-13  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-msg-header.c
	(tny_camel_msg_header_get_cc): the get_cc method was returning the bcc
	instead of the cc
	* libtinymail-camel/tny-camel-folder.c
	(tny_camel_folder_remove_msg_default)
	(tny_camel_folder_remove_msgs_default)
	(tny_camel_folder_transfer_msgs_async_thread): update the local size properly when
	removing or transferring messages

2007-12-12  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-folder.c: load camel folder before
	getting the url string of it.
	* libtinymail-camel/tny-camel-msg-header.c: now the decorated header
	can be added with g_object_ref or a weak reference.
	* libtinymail-camel/tny-camel-folder.c: now the TnyCamelHeader we
	use to retrieve the message in find_msg is constructed from summary. 
	This is created in a way it's persistent, and then, we can access
	properly to the summary flags. We also eturn null and set error if
	message is not in summary.
	* libtinymail-camel/tny-camel-full-msg-receive-strategy.c
	libtinymail-camel/tny-camel-partial-msg-receive-strategy.c: